[~] Fix mobile overflow

--- a/app/client/src/scss/elements/ReferenceSliderElement.scss
+++ b/app/client/src/scss/elements/ReferenceSliderElement.scss
@@ -1,6 +1,8 @@
 @use "../variables" as *;
 
 .section.section--ReferenceSliderElement {
+    overflow: hidden;
+
     .section_content{
         text-align: center;
 
